--- a/app/app.css
+++ b/app/app.css
@@ -15,6 +15,7 @@ html, body, #map {
   z-index : 10;
   background-color: white;
   font-size: 30pt;
+  font-family: 'Roboto Slab', serif;
   border: 3px solid #B4CDCD;
   border-radius: 20px;
   #opacity: 0.5;
