--- a/app/app.css
+++ b/app/app.css
@@ -15,11 +15,18 @@ html,body,#map{
 	padding:20px;
 	z-index:10;
 	background-color:#000;
-	font-size:30px;
+	font-size:25px;
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 400;
 	color: #fff;
 	border:2px solid #000;
 	border-radius:3px;
-	opacity:.85
+	opacity:.80
+}
+
+#redo{
+	font-size:15px;
+}
+#add{
+	font-size:15px;
 }
