--- a/app/app.css
+++ b/app/app.css
@@ -30,3 +30,24 @@ html,body,#map{
 #add{
 	font-size:15px;
 }
+
+.autocomplete-suggestions { 
+	border: 1px solid #999; 
+	background: #fff; 
+	cursor: default; 
+	overflow: auto; 
+}
+.autocomplete-suggestion { 
+	padding: 5px 5px; 
+	font-size: 1.2em; 
+	white-space: nowrap; 
+	overflow: hidden; 
+}
+
+.autocomplete-selected { 
+	background: #f0f0f0; 
+}
+.autocomplete-suggestions strong { 
+	font-weight: normal; 
+	color: #428bca; 
+}
