--- a/app/app_mobile.css
+++ b/app/app_mobile.css
@@ -1,16 +1,17 @@
 body{
 	padding:0;
-	margin:0
+	margin:0;
 }
 
 html,body{
-	height:100%
+	height:100%;
 }
 
 #map{
     height: -webkit-calc(100% - 100px);
     height: -moz-calc(100% - 100px);
     height: calc(100% - 100px);
+    top:100px;
 }
 
 #inputarea{
