Add banner for online/offline events, add helper functions, and bind helper functions to tilelayer events for map, ajax events for poi search, and inbuilt navigator.onLine online/offline events

--- a/app/app.css
+++ b/app/app.css
@@ -28,6 +28,20 @@ html,body{
 	color: #fff;
 }
 
+#online-offline-pane {
+  position: absolute;
+  top: 25px;
+  height: 35px;
+  line-height: 35px;
+  width: 100%;
+	background-color: white;
+  text-align: center;
+  font-size: 17px;
+  color: white;
+  transition: all 0.5s ease-in-out;
+  z-index: 1;
+}
+
 .buttons {
     color: white;
     font-size: 35px;
